tests/baselines/reference/tsxSpreadAttributesResolution6.errors.txt
tests/cases/conformance/jsx/file.tsx(13,24): error TS2322: Type '{ editable: 为真; }' is not assignable to type '(IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为假; } & { children?: ReactNode; }) | (IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为真; onEdit: (newText: 文字) => 无值; } & { children?: ReactNode; })'.
  Type '{ editable: 为真; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为真; onEdit: (newText: 文字) => 无值; } & { children?: ReactNode; }'.
    Type '{ editable: 为真; }' is not assignable to type '{ editable: 为真; onEdit: (newText: 文字) => 无值; }'.
      Property 'onEdit' is missing in type '{ editable: 为真; }'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    type TextProps = { editable: false }
                   | { editable: true, onEdit: (newText: string) => void };
    
    class TextComponent extends React.Component<TextProps, {}> {
        render() {
            return <span>Some Text..</span>;
        }
    }
    
    // Error
    let x = <TextComponent editable={true} />
                           ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ editable: 为真; }' is not assignable to type '(IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为假; } & { children?: ReactNode; }) | (IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为真; onEdit: (newText: 文字) => 无值; } & { children?: ReactNode; })'.
!!! error TS2322:   Type '{ editable: 为真; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<TextComponent> & { editable: 为真; onEdit: (newText: 文字) => 无值; } & { children?: ReactNode; }'.
!!! error TS2322:     Type '{ editable: 为真; }' is not assignable to type '{ editable: 为真; onEdit: (newText: 文字) => 无值; }'.
!!! error TS2322:       Property 'onEdit' is missing in type '{ editable: 为真; }'.
    
    const textProps: TextProps = {
        editable: false
    };